--- a/kot_history.html
+++ b/kot_history.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta charset="utf-8"/>
 	
-	<link rel="icon" type="image/png" href="kot_hibi.png"/>
+	<link rel="icon" type="image/png" href="img/kot_hibi.png"/>
 	<link href="kot_style.css" rel="stylesheet"/> 
 	
 </head>
@@ -27,12 +27,12 @@
 		used to be chooseme(navIndex);
 		-->
 		<h2 id="navTitle">Navigation</h2>
-		<button class="navButton" id="navHome" onmouseleave="navBarHover(10);" onmouseover="navBarHover(0);" onclick="document.location='kot_index.html'">&#x1F3E0</button>
-		<button class="navButton" id="navHistory" onmouseleave="navBarHover(10);" onmouseover="navBarHover(1);" onclick="document.location='kot_history.html'">&#x1F631</button>
-		<button class="navButton" id="navMap" onmouseleave="navBarHover(10);" onmouseoverr="navBarHover(2);" onclick="document.location='kot_map.html'">&#x1F3B7</button>
-		<button class="navButton" id="navFAQ" onmouseleave="navBarHover(10);" onmouseover="navBarHover(3);" onclick="document.location='kot_faq.html'">&#x1F3AE</button>
-		<button class="navButton" id="navSim" onmouseleave="navBarHover(10);" onmouseover="navBarHover(4);" onclick="document.location='kot_sim.html'">&#x1F3A4</button>
-		<button class="navButton" id="navMisc" onmouseleave="navBarHover(10);" onmouseover="navBarHover(5);" onclick="document.location='kot_misc.html'">&#x1F31F</button>
+		<button class="navButton" id="navHome" onmouseleave="navBarHover(10);" onmouseover="navBarHover(0);" onclick="document.location='kot_index.html'"></button>
+		<button class="navButton" id="navHistory" onmouseleave="navBarHover(10);" onmouseover="navBarHover(1);" onclick="document.location='kot_history.html'"></button>
+		<button class="navButton" id="navMap" onmouseleave="navBarHover(10);" onmouseover="navBarHover(2);" onclick="document.location='kot_map.html'"></button>
+		<button class="navButton" id="navFAQ" onmouseleave="navBarHover(10);" onmouseover="navBarHover(3);" onclick="document.location='kot_faq.html'"></button>
+		<button class="navButton" id="navSim" onmouseleave="navBarHover(10);" onmouseover="navBarHover(4);" onclick="document.location='kot_sim.html'"></button>
+		<button class="navButton" id="navMisc" onmouseleave="navBarHover(10);" onmouseover="navBarHover(5);" onclick="document.location='kot_misc.html'"></button>
 		<p id="navText"></p>
 	</div>
 	
@@ -67,7 +67,7 @@
 		
 		<div class="imgRight">
 			<img src="img/therma_thistle.png" alt="Domesticated Spieces of the Therma Thistle">
-			<h4>Painting of The Therma Sea Turtle</h4>
+			<h4>Domesticated Spieces of The Therma Thistle</h4>
 		</div>
 		
 		<div class="imgLeft">
